# RewardHarness

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  OUTPUTS.md  README.md  SECURITY.md  TROUBLESHOOTING.md  WALKTHROUGH.md  pyproject.toml  requirements-vllm.txt  requirements.txt
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows-pending/: ci.yml
configs/: default.yaml  endpoints.txt
data/: checksums.txt
examples/: README.md  inspect_library.py  sample_benchmark_results.json  sample_evolution_log.json  score_pair.py  show_reasoning_format.py
score-guidelines/: README.md  template1_instruction_following.md  template2_visual_quality.md
scripts/: _kill_vllm.sh  _launch_all_vllm.sh  check_env.py  check_links.sh  download_data.sh  reproduce.sh  run_all_benchmarks.sh  run_benchmark.py  run_evolution.py  run_evolution_seed.sh  sbatch_vllm.sh  serve_vllm_multi.sh  setup_env.sh  start_vllm_remote.sh
src/: __init__.py  chain_analyzer.py  endpoint_pool.py  evaluator.py  evolver.py  gemini_client.py  pipeline.py  router.py  sub_agent.py
tests/: README.md  __init__.py  conftest.py  test_chain_evolver.py  test_evaluator.py  test_library.py  test_library_integration.py  test_pipeline.py  test_router.py  test_sub_agent.py
vanilla/: README.md  bench_claude.py  bench_genaibench.py  bench_imagenhub.py  bench_wanqing.py  gemini_bench_claude.py  gemini_bench_genaibench.py  gemini_bench_imagenhub.py
(+79 files in other folders)
